<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/homeFragment" android:icon="@drawable/ic_home" android:title="@string/nav_home" />
        <item android:id="@+id/matchesFragment" android:icon="@drawable/ic_matches" android:title="@string/nav_matches" />
        <item android:id="@+id/leaguesFragment" android:icon="@drawable/ic_leagues" android:title="@string/nav_leagues" />
        <item android:id="@+id/standingsFragment" android:icon="@drawable/ic_standings" android:title="@string/nav_standings" />
        <item android:id="@+id/scorersFragment" android:icon="@drawable/ic_scorers" android:title="@string/nav_scorers" />
        <item android:id="@+id/newsFragment" android:icon="@drawable/ic_news" android:title="@string/nav_news" />
        <item android:id="@+id/videosFragment" android:icon="@drawable/ic_videos" android:title="@string/nav_videos" />
        <item android:id="@+id/channelsFragment" android:icon="@drawable/ic_channels" android:title="@string/nav_channels" />
        <item android:id="@+id/favoritesFragment" android:icon="@drawable/ic_favorites" android:title="@string/nav_favorites" />
    </group>
    <item android:title="">
        <menu>
            <item android:id="@+id/notificationsFragment" android:icon="@drawable/ic_notifications" android:title="@string/nav_notifications" />
            <item android:id="@+id/settingsFragment" android:icon="@drawable/ic_settings" android:title="@string/nav_settings" />
        </menu>
    </item>
</menu>
